[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sereto"
version = "0.0.10"
description = "Security Reporting Tool."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  { name = "Tomáš Stefan", email = "t@s4n.cz" },
]
keywords = [
  "automate",
  "markdown",
  "pandocfilters",
  "pdf",
  "penetration testing",
  "pentest",
  "report",
  "tex",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Framework :: Pydantic",
  "Framework :: Pytest",
  "Framework :: tox",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Topic :: Security",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dependencies = [
  "click~=8.1.7",
  "jinja2~=3.1.4",
  "matplotlib~=3.9.2",
  "pandocfilters~=1.5.1",
  "pathspec>=0.12.1",
  "pydantic-settings~=2.5.2",
  "pydantic~=2.9.1",
  "pydantic[email]",
  "pypdf~=4.3.1",
  "python-frontmatter~=1.1.0",
  "rich~=13.8.0",
  "ruamel.yaml>=0.18.6",
  "semver~=3.0.2",
  "toml>=0.10.2",
  "Unidecode~=1.3.8",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
]

[project.urls]
Changelog = "https://github.com/s3r3t0/sereto/blob/main/CHANGELOG.md"
Documentation = "https://sereto.s4n.cz"
Homepage = "https://github.com/s3r3t0/sereto"
Source = "https://github.com/s3r3t0/sereto"

[project.scripts]
sereto = "sereto.cli.cli:cli"

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "."

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pycodestyle
  "E",
  "W",
  # pydocstyle
  # "D",  # TODO
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
]
