[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sereto"
version = "0.2.6"
description = "Security Reporting Tool."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Tomáš Stefan", email = "t@s4n.cz" },
]
keywords = [
  "automate",
  "markdown",
  "pandocfilters",
  "pdf",
  "penetration testing",
  "pentest",
  "report",
  "tex",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Pydantic :: 2",
  "Framework :: Pydantic",
  "Framework :: Pytest",
  "Framework :: tox",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
  "Topic :: Security",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dependencies = [
  "annotated-types~=0.7.0",
  "click~=8.1.7",
  "cryptography~=45.0.2",
  "humanize~=4.12.1",
  "jinja2~=3.1.4",
  "keyring~=25.6.0",
  "keyrings.alt~=5.0.2",
  "matplotlib~=3.10.0",
  "pandocfilters~=1.5.1",
  "pathspec>=0.12.1",
  "prompt-toolkit~=3.0.50",
  "pydantic-settings~=2.9.1",
  "pydantic[email]",
  "pydantic~=2.11.1",
  "pypdf~=5.5.0",
  "python-frontmatter~=1.1.0",
  "rapidfuzz~=3.13.0",
  "rich~=14.0.0",
  "semver~=3.0.2",
  "sereto-repl~=0.3.1",
  "textual~=3.2.0",
  "toml>=0.10.2",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
]
dev = [
  "textual-dev",
]

[project.urls]
Changelog = "https://github.com/s3r3t0/sereto/blob/main/CHANGELOG.md"
Documentation = "https://sereto.s4n.cz"
Homepage = "https://github.com/s3r3t0/sereto"
Source = "https://github.com/s3r3t0/sereto"

[project.scripts]
sereto = "sereto.cli.cli:entry_point"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "."

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # pycodestyle
  "E",
  "W",
  # pydocstyle
  # "D",  # TODO
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
]
